# dtJiraMCPServer

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: installation.md  tool-reference.md  user-guide.md
src/dtjiramcpserver/: __init__.py  __main__.py  _description.txt  _full_name.txt  _short_name.txt  app.py  exceptions.py  server.py
src/dtjiramcpserver/client/: __init__.py  base.py  errors.py  jsm.py  pagination.py  platform.py  rate_limiter.py
src/dtjiramcpserver/config/: __init__.py  models.py
src/dtjiramcpserver/tools/: __init__.py  base.py  registry.py
src/dtjiramcpserver/tools/assets/: __init__.py  workspaces.py
src/dtjiramcpserver/tools/fields/: __init__.py  contexts.py  custom_fields.py  schemes.py  screens.py
src/dtjiramcpserver/tools/groups/: __init__.py  groups.py  members.py
src/dtjiramcpserver/tools/issues/: __init__.py  create.py  delete.py  get.py  search.py  transition.py  update.py
src/dtjiramcpserver/tools/knowledgebase/: __init__.py  articles.py
src/dtjiramcpserver/tools/lookup/: __init__.py  issue_types.py  priorities.py  users.py
src/dtjiramcpserver/tools/meta/: __init__.py  list_tools.py  tool_guide.py
src/dtjiramcpserver/tools/projects/: __init__.py  create_project.py  delete_project.py  (+3 more)
src/dtjiramcpserver/validation/: __init__.py  validators.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_live_tools.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_errors.py  test_meta_tools.py  test_pagination.py  test_rate_limiter.py  test_read_only_mode.py  test_server.py  test_tool_base.py  test_tool_registry.py  test_validators.py
tests/unit/tools/: __init__.py  test_fields.py  test_groups.py  test_issues.py  test_lookup.py  test_phase8.py  test_projects.py  test_requesttypes.py  test_servicedesk.py  test_workflows.py
(+15 files in other folders)
