[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtJiraMCPServer"
dynamic = ["version"]
description = "MCP Server for Jira Cloud and JSM Cloud administration via natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matthew Westwood-Hill"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "dtPyAppFramework==4.3.0",
    "mcp>=1.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

[project.scripts]
dtjiramcp = "dtjiramcpserver.__main__:main"

[tool.setuptools.dynamic]
version = {file = "src/dtjiramcpserver/_version.txt"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dtjiramcpserver = ["*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "T20"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.coverage.run]
source = ["dtjiramcpserver"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
